* Added preliminary support for output SQL file generation * Abstracted IDbCommand execution & exception translation logic * Documentation (mostly images)

--- a/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
+++ b/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileDbCommandExecutive.cs" />
     <Compile Include="MigrationCommand.cs" />
     <Compile Include="MigrationParameters.cs" />
     <Compile Include="MigrationParametersParser.cs" />
