--- a/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
+++ b/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
@@ -35,9 +35,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileDbCommandExecutive.cs" />
+    <Compile Include="IMigrationCommand.cs" />
+    <Compile Include="InfoMigrationCommand.cs" />
     <Compile Include="MigrationCommand.cs" />
+    <Compile Include="MigrationCommandAttribute.cs" />
+    <Compile Include="MigrationCommandBase.cs" />
+    <Compile Include="MigrationCommandRegistry.cs" />
     <Compile Include="MigrationParameters.cs" />
     <Compile Include="MigrationParametersParser.cs" />
+    <Compile Include="MigrationRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -45,6 +51,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Util\ReflectionUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\octalforty.Wizardby.Core\octalforty.Wizardby.Core.csproj">
