--- a/src/octalforty.Wizardby.Db/octalforty.Wizardby.Db.csproj
+++ b/src/octalforty.Wizardby.Db/octalforty.Wizardby.Db.csproj
@@ -40,9 +40,9 @@
     <Compile Include="Jet\JetTypeMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServer\Impl\Action.cs" />
-    <Compile Include="SqlServer\SqlServerCommandExecutive.cs" />
     <Compile Include="SqlServer\SqlServerConnectionStringBuilder.cs" />
     <Compile Include="SqlServer\SqlServerDialect.cs" />
+    <Compile Include="SqlServer\SqlServerExecutive.cs" />
     <Compile Include="SqlServer\SqlServerNamingStrategy.cs" />
     <Compile Include="SqlServer\SqlServerPlatform.cs">
       <SubType>Code</SubType>
