* Fixed all existing migration commands, still need refactoring though * Started working on reverse engineering stuff

--- a/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
+++ b/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
@@ -301,6 +301,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Db\IDbPlatformDependency.cs" />
+    <Compile Include="Db\IDbSchemaProvider.cs" />
     <Compile Include="Db\IDbScriptGenerator.cs" />
     <Compile Include="Db\IDbTypeMapper.cs">
       <SubType>Code</SubType>
