--- a/src/octalforty.Wizardby.Db/octalforty.Wizardby.Db.csproj
+++ b/src/octalforty.Wizardby.Db/octalforty.Wizardby.Db.csproj
@@ -39,6 +39,11 @@
     <Compile Include="Jet\JetScriptGenerator.cs" />
     <Compile Include="Jet\JetTypeMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SqlServer\SqlServerConnectionStringBuilder.cs" />
     <Compile Include="SqlServer\SqlServerDialect.cs" />
     <Compile Include="SqlServer\SqlServerNamingStrategy.cs" />
@@ -53,6 +58,13 @@
       <Project>{31A1F1A5-E685-4C89-929D-FDC93CD12BB0}</Project>
       <Name>octalforty.Wizardby.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Firebird\" />
