* Added support for Deploy migration command * Added preliminary support for SQL Server Compact Edition

--- a/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
+++ b/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleStylingScope.cs" />
+    <Compile Include="DeployMigrationCommand.cs" />
     <Compile Include="DowngradeMigrationCommand.cs" />
     <Compile Include="GenerateMigrationCommand.cs" />
     <Compile Include="IMigrationCommand.cs" />
