--- a/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
+++ b/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
@@ -289,6 +289,7 @@
     </Compile>
     <Compile Include="Db\DefaultDbNamingStrategy.cs" />
     <Compile Include="Db\IDbConnectionStringBuilder.cs" />
+    <Compile Include="Db\IDbDeploymentManager.cs" />
     <Compile Include="Db\IDbDialect.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -306,10 +307,12 @@
     </Compile>
     <Compile Include="Deployment\EnvironmentCollection.cs" />
     <Compile Include="Deployment\IDeploymentInfo.cs" />
+    <Compile Include="Deployment\IDeploymentService.cs" />
     <Compile Include="Deployment\IEnvironment.cs" />
     <Compile Include="Deployment\IEnvironmentCollection.cs" />
     <Compile Include="Deployment\DeploymentInfoParser.cs" />
     <Compile Include="Deployment\Impl\DeploymentInfo.cs" />
+    <Compile Include="Deployment\Impl\DeploymentService.cs" />
     <Compile Include="Deployment\Impl\Environment.cs" />
     <Compile Include="Migration\IMigrationService.cs">
       <SubType>Code</SubType>
