--- a/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
+++ b/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttributeAwareTypeRegistry.cs" />
     <Compile Include="ConsoleStylingScope.cs" />
     <Compile Include="DbPlatformRegistry.cs" />
     <Compile Include="DeployMigrationCommand.cs" />
@@ -68,6 +69,10 @@
     <ProjectReference Include="..\octalforty.Wizardby.Core\octalforty.Wizardby.Core.csproj">
       <Project>{31A1F1A5-E685-4C89-929D-FDC93CD12BB0}</Project>
       <Name>octalforty.Wizardby.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\octalforty.Wizardby.Db.SqlServer2005\octalforty.Wizardby.Db.SqlServer2005.csproj">
+      <Project>{7038F564-79EF-43DF-81AD-13DEFEA67E3D}</Project>
+      <Name>octalforty.Wizardby.Db.SqlServer2005</Name>
     </ProjectReference>
     <ProjectReference Include="..\octalforty.Wizardby.Db\octalforty.Wizardby.Db.csproj">
       <Project>{735ADA03-27DA-4C9F-BDAF-21DEEC2DD5C8}</Project>
