--- a/src/octalforty.Wizardby.Db.SqlServer2005/octalforty.Wizardby.Db.SqlServer2005.csproj
+++ b/src/octalforty.Wizardby.Db.SqlServer2005/octalforty.Wizardby.Db.SqlServer2005.csproj
@@ -4,11 +4,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{735ADA03-27DA-4C9F-BDAF-21DEEC2DD5C8}</ProjectGuid>
+    <ProjectGuid>{7038F564-79EF-43DF-81AD-13DEFEA67E3D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>octalforty.Wizardby.Db</RootNamespace>
-    <AssemblyName>octalforty.Wizardby.Db</AssemblyName>
+    <RootNamespace>octalforty.Wizardby.Db.SqlServer2005</RootNamespace>
+    <AssemblyName>octalforty.Wizardby.Db.SqlServer2005</AssemblyName>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,52 +32,21 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Jet\JetConnectionStringBuilder.cs" />
-    <Compile Include="Jet\JetPlatform.cs" />
-    <Compile Include="Jet\JetDialect.cs" />
-    <Compile Include="Jet\JetScriptGenerator.cs" />
-    <Compile Include="Jet\JetTypeMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="SqlCe\SqlCeConnectionStringBuilder.cs" />
-    <Compile Include="SqlCe\SqlCeDeploymentManager.cs" />
-    <Compile Include="SqlCe\SqlCeDialect.cs" />
-    <Compile Include="SqlCe\SqlCePlatform.cs" />
-    <Compile Include="SqlCe\SqlCeScriptGenerator.cs" />
-    <Compile Include="SqlCe\SqlCeTypeMapper.cs" />
-    <Compile Include="SqlServer\SqlServerConnectionStringBuilder.cs" />
-    <Compile Include="SqlServer\SqlServerDeploymentManager.cs" />
-    <Compile Include="SqlServer\SqlServerDialect.cs" />
-    <Compile Include="SqlServer\SqlServerNamingStrategy.cs" />
-    <Compile Include="SqlServer\SqlServerPlatform.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="SqlServer\SqlServerScriptGenerator.cs" />
-    <Compile Include="SqlServer\SqlServerTypeMapper.cs" />
+    <Compile Include="SqlServer2005Platform.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\octalforty.Wizardby.Core\octalforty.Wizardby.Core.csproj">
       <Project>{31A1F1A5-E685-4C89-929D-FDC93CD12BB0}</Project>
       <Name>octalforty.Wizardby.Core</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <SubType>Designer</SubType>
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Firebird\" />
+    <ProjectReference Include="..\octalforty.Wizardby.Db\octalforty.Wizardby.Db.csproj">
+      <Project>{735ADA03-27DA-4C9F-BDAF-21DEEC2DD5C8}</Project>
+      <Name>octalforty.Wizardby.Db</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
