--- a/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
+++ b/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
@@ -267,10 +267,12 @@
     <Compile Include="Compiler\XmdlScanner.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Db\DbAction.cs" />
     <Compile Include="Db\DbConnectionStringBuilderBase.cs" />
     <Compile Include="Db\DbDialectBase.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Db\DbExceptionTranslator.cs" />
     <Compile Include="Db\DbOperation.cs" />
     <Compile Include="Db\DbPlatformAttribute.cs">
       <SubType>Code</SubType>
@@ -280,6 +282,7 @@
     </Compile>
     <Compile Include="Db\DbPlatformDependencyBase.cs" />
     <Compile Include="Db\DbPlatformException.cs" />
+    <Compile Include="Db\DbPlatformExceptionTranslator.cs" />
     <Compile Include="Db\DbScriptGeneratorBase.cs" />
     <Compile Include="Db\DbTypeMapperBase.cs">
       <SubType>Code</SubType>
@@ -290,6 +293,7 @@
     <Compile Include="Db\IDbDialect.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Db\IDbExceptionTranslator.cs" />
     <Compile Include="Db\IDbNamingStrategy.cs">
       <SubType>Code</SubType>
     </Compile>
