--- a/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
+++ b/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
@@ -78,6 +78,10 @@
       <Project>{31A1F1A5-E685-4C89-929D-FDC93CD12BB0}</Project>
       <Name>octalforty.Wizardby.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\octalforty.Wizardby.Db.Jet\octalforty.Wizardby.Db.Jet.csproj">
+      <Project>{A6191AC7-CB42-415F-9CFA-76389CBA3794}</Project>
+      <Name>octalforty.Wizardby.Db.Jet</Name>
+    </ProjectReference>
     <ProjectReference Include="..\octalforty.Wizardby.Db.SqlServer2005\octalforty.Wizardby.Db.SqlServer2005.csproj">
       <Project>{7038F564-79EF-43DF-81AD-13DEFEA67E3D}</Project>
       <Name>octalforty.Wizardby.Db.SqlServer2005</Name>
