--- a/src/octalforty.Wizardby.Db.Jet/octalforty.Wizardby.Db.Jet.csproj
+++ b/src/octalforty.Wizardby.Db.Jet/octalforty.Wizardby.Db.Jet.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{735ADA03-27DA-4C9F-BDAF-21DEEC2DD5C8}</ProjectGuid>
+    <ProjectGuid>{A6191AC7-CB42-415F-9CFA-76389CBA3794}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>octalforty.Wizardby.Db</RootNamespace>
-    <AssemblyName>octalforty.Wizardby.Db</AssemblyName>
+    <RootNamespace>octalforty.Wizardby.Db.Jet</RootNamespace>
+    <AssemblyName>octalforty.Wizardby.Db.Jet</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,47 +30,36 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JetConnectionStringBuilder.cs" />
+    <Compile Include="JetDeploymentManager.cs" />
+    <Compile Include="JetDialect.cs" />
+    <Compile Include="JetPlatform.cs" />
+    <Compile Include="JetScriptGenerator.cs" />
+    <Compile Include="JetTypeMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="SqlCe\SqlCeConnectionStringBuilder.cs" />
-    <Compile Include="SqlCe\SqlCeDeploymentManager.cs" />
-    <Compile Include="SqlCe\SqlCeDialect.cs" />
-    <Compile Include="SqlCe\SqlCePlatform.cs" />
-    <Compile Include="SqlCe\SqlCeScriptGenerator.cs" />
-    <Compile Include="SqlCe\SqlCeTypeMapper.cs" />
-    <Compile Include="SqlServer\SqlServerConnectionStringBuilder.cs" />
-    <Compile Include="SqlServer\SqlServerDeploymentManager.cs" />
-    <Compile Include="SqlServer\SqlServerDialect.cs" />
-    <Compile Include="SqlServer\SqlServerNamingStrategy.cs" />
-    <Compile Include="SqlServer\SqlServerPlatform.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="SqlServer\SqlServerScriptGenerator.cs" />
-    <Compile Include="SqlServer\SqlServerTypeMapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\octalforty.Wizardby.Core\octalforty.Wizardby.Core.csproj">
       <Project>{31A1F1A5-E685-4C89-929D-FDC93CD12BB0}</Project>
       <Name>octalforty.Wizardby.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\octalforty.Wizardby.Db\octalforty.Wizardby.Db.csproj">
+      <Project>{735ADA03-27DA-4C9F-BDAF-21DEEC2DD5C8}</Project>
+      <Name>octalforty.Wizardby.Db</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <SubType>Designer</SubType>
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Firebird\" />
+    <COMReference Include="ADOX">
+      <Guid>{00000600-0000-0010-8000-00AA006D2EA4}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
