* Started working on DB schema reverse-engineering infrastructure

--- a/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
+++ b/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="RedoMigrationCommand.cs" />
+    <Compile Include="ReverseEngineerMigrationCommand.cs" />
     <Compile Include="RollbackMigrationCommand.cs" />
     <Compile Include="ServiceBuilder.cs" />
     <Compile Include="ServiceProvider.cs" />
