--- a/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
+++ b/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
@@ -73,8 +73,11 @@
     <Compile Include="Core\SemanticModel\SchemaDefinitionTestFixture.cs" />
     <Compile Include="Core\SemanticModel\TableDefinitionTestFixture.cs" />
     <Compile Include="Db\Jet\JetTransformerTestFixture.cs" />
+    <Compile Include="Db\SqlCe\SqlCeConnectionStringBuilderTestFixture.cs" />
+    <Compile Include="Db\SqlServer\Data\ObjectMapperTestFixture.cs" />
     <Compile Include="Db\SqlServer\SqlServerConnectionStringBuilderTestFixture.cs" />
     <Compile Include="Db\SqlServer\SqlServerDialectTestFixture.cs" />
+    <Compile Include="Db\SqlServer\SqlServerSchemaProviderTestFixture.cs" />
     <Compile Include="Db\SqlServer\SqlServerScriptGeneratorTestFixture.cs" />
     <Compile Include="Db\SqlServer\SqlServerTypeMapperTestFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
