* Working on DB schema reverse-engineering infrastructure

--- a/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
+++ b/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
@@ -360,6 +360,8 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="ReverseEngineering\Impl\ReverseEngineeringService.cs" />
+    <Compile Include="ReverseEngineering\IReverseEngineeringService.cs" />
     <Compile Include="SemanticModel\ColumnDefinition.cs">
       <SubType>Code</SubType>
     </Compile>
