--- a/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
+++ b/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
@@ -51,6 +51,7 @@
     <Compile Include="IMigrationCommand.cs" />
     <Compile Include="InfoMigrationCommand.cs" />
     <Compile Include="IServiceProvider.cs" />
+    <Compile Include="ITimestampProvider.cs" />
     <Compile Include="MigrateMigrationCommand.cs" />
     <Compile Include="MigrationCommand.cs" />
     <Compile Include="MigrationCommandAttribute.cs" />
@@ -58,7 +59,6 @@
     <Compile Include="MigrationCommandRegistry.cs" />
     <Compile Include="MigrationParameters.cs" />
     <Compile Include="MigrationParametersParser.cs" />
-    <Compile Include="MigrationRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -72,6 +72,7 @@
     <Compile Include="ServiceBuilder.cs" />
     <Compile Include="ServiceProvider.cs" />
     <Compile Include="UpgradeMigrationCommand.cs" />
+    <Compile Include="UtcDateTimeTimestampProvider.cs" />
     <Compile Include="Util\ReflectionUtil.cs" />
   </ItemGroup>
   <ItemGroup>
