--- a/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
+++ b/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Core\Migration\Impl\MigrationScriptExecutive.cs" />
     <Compile Include="Core\Migration\Impl\MigrationServiceTestFixture.cs" />
     <Compile Include="Core\Migration\Impl\MigrationVersionInfoManager.cs" />
+    <Compile Include="Core\ReverseEngineering\Impl\ReverseEngineeringServiceTestFixture.cs" />
     <Compile Include="Core\SemanticModel\SchemaDefinitionTestFixture.cs" />
     <Compile Include="Core\SemanticModel\SemanticModelUtilTestFixture.cs" />
     <Compile Include="Core\SemanticModel\TableDefinitionTestFixture.cs" />
