* Working on schema reverse engineering (Issue 4)   - Renamed SchemaDefinition to Schema

--- a/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
+++ b/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
@@ -393,9 +393,7 @@
     <Compile Include="SemanticModel\ReferenceDefinition.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="SemanticModel\SchemaDefinition.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="SemanticModel\Schema.cs" />
     <Compile Include="SemanticModel\SchemaElementCollection.cs" />
     <Compile Include="SemanticModel\SchemaElementDefinitionBase.cs">
       <SubType>Code</SubType>
