--- a/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
+++ b/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttributeAwareTypeRegistry.cs" />
+    <Compile Include="BufferedStreamReader.cs" />
     <Compile Include="ConsoleStylingScope.cs" />
     <Compile Include="DbPlatformRegistry.cs" />
     <Compile Include="Deployment\DeploymentInfoParser.cs" />
