--- a/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
+++ b/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
@@ -387,6 +387,7 @@
     <Compile Include="SemanticModel\IReferenceDefinition.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="SemanticModel\ISchemaDefinition.cs" />
     <Compile Include="SemanticModel\ISchemaElementDefinitionCollection.cs" />
     <Compile Include="SemanticModel\ISchemaElementDefinition.cs" />
     <Compile Include="SemanticModel\ITableDefinition.cs" />
@@ -394,6 +395,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="SemanticModel\Schema.cs" />
+    <Compile Include="SemanticModel\SchemaDefinition.cs" />
     <Compile Include="SemanticModel\SchemaElementCollection.cs" />
     <Compile Include="SemanticModel\SchemaElementDefinitionBase.cs">
       <SubType>Code</SubType>
