--- a/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
+++ b/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
@@ -226,6 +226,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Compiler\Impl\UpgradeGenerationStage.cs" />
+    <Compile Include="Compiler\Impl\VersionOrdererCompilerStage.cs" />
     <Compile Include="Compiler\Location.cs">
       <SubType>Code</SubType>
     </Compile>
