--- a/src/octalforty.Wizardby.Db/octalforty.Wizardby.Db.csproj
+++ b/src/octalforty.Wizardby.Db/octalforty.Wizardby.Db.csproj
@@ -68,6 +68,7 @@
     <Compile Include="SqlServer2000\SqlServer2000SchemaProvider.cs" />
     <Compile Include="SqlServer2000\SqlServer2000ScriptGenerator.cs" />
     <Compile Include="SqlServer2000\SqlServer2000TypeMapper.cs" />
+    <Compile Include="SqlServer2005\SqlServer2005ConnectionStringBuilder.cs" />
     <Compile Include="SqlServer2005\SqlServer2005Platform.cs" />
     <Compile Include="SqlServer2005\SqlServer2005SchemaProvider.cs" />
     <Compile Include="SqlServer2005\SqlServer2005TypeMapper.cs" />
